--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,13 @@ header {
     align-items: center;
     padding: 10px 20px;
     background-color: #fff;
-    border-bottom: 1px solid #ddd;
+    /*border-bottom: 1px solid #ddd;*/
 }
 
  .logo {
-    height: 80px;
+    height: 70px;
  }
  nav ul {
-    /*flex-wrap: wrap;*/
     list-style: none;
     display: flex;
     gap: 40px;
@@ -44,6 +43,7 @@ header {
  }
 
 nav ul li a {
+
     text-decoration: none;
     color: black;
     font-weight: normal;
@@ -70,6 +70,11 @@ nav ul li a::before {
 nav ul li a:hover::before,
 nav ul li a:focus::before {
     background-color: #007BFF; /* Affiche la ligne bleue au survol */
+}
+
+.container {
+    color: black;
+    
 }
 
 .main-container {
@@ -217,5 +222,36 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+
+     header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+        background-color: #fff;
+    
+    }
+
+    nav ul li a::before {
+        content: '';
+        position: absolute;
+        top: 29px;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background-color: transparent;
+        transition: background-color 0.3s ease;
+        margin: auto;
+    }
+
+   .populaires-cards {
+        width: 330%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+        margin: auto;
+    }
+    
 }
